--- a/map.html
+++ b/map.html
@@ -160,6 +160,11 @@
             margin-bottom: 2.25rem;
         }
 
+        .footer .text-container.about {
+            margin-right: 5rem;
+        }
+
+
         .footer h4 {
             margin-bottom: 0.75rem;
             color: #fff;
@@ -169,6 +174,7 @@
         .footer ul {
             font-size: 0.875rem;
             line-height: 1.375rem;
+            font: 400 1rem/1.5625rem "Open Sans", sans-serif;
         }
         body,
         html {
@@ -178,15 +184,15 @@
 
         body, p1 {
             color: #787976;
-            font: 400 1rem/1.5625rem "Open Sans", sans-serif;
         }   /*-- footer end--*/
 
         /*************************/
         /*     Copyright     */
         /*************************/
         .copyright {
+            /***
             padding-top: 1rem;
-            padding-bottom: 0.5rem;
+            padding-bottom: 0.5rem;*/
             background-color: #113448;
             text-align: center;
         }
@@ -195,6 +201,9 @@
         .copyright a {
             color: #dfe5ec;
             text-decoration: none;
+            font: 400 1rem/1.5625rem "Open Sans", sans-serif;
+            font-size: 0.875rem
+
         }
 
     </style>
@@ -282,32 +291,33 @@
 
     </div>
 
+    <div >
     <!-- Footer -->
-    <div class="footer">
+    <div class="footer" style="height:60%">
         <div class="container" style="padding: 20px">
-            <div class="row" style="display: flex;-ms-flex-wrap: wrap;flex-wrap: wrap;margin-right: 15px;margin-left: 40px;">
+            <div class="row" style="display: flex;-ms-flex-wrap: wrap;flex-wrap: wrap;margin-left: 10px;">
                 <div class="col-md-6" style="position: relative;width: 100%;padding-right: 15px;padding-left: 15px;">
-                    <div class="text-container about" style="width: 330px; height:148px; margin-bottom: 2.25rem;">
+                    <div class="text-container about" style="width: 490px; height:148px; margin-bottom: 2.25rem;">
                         <h4>Our Story</h4>
-                        <p1 class="white" style="color:#dfe5ec; text-align:left;">Diabetes Diet Advisor(DDA) helps to support the food requirements of type 2 elderly diabetic patients from various backgrounds of regional Australia. We strive every day to make human lives happier and healthier.</p1>
+                        <p1 class="white" style="color:#dfe5ec; text-align:left;font-size: 1rem">Diabetes Diet Advisor(DDA) helps to support the food requirements of type 2 elderly diabetic patients from various backgrounds of regional Australia. We strive every day to make human lives happier and healthier.</p1>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
 
-                <div class="col-md-2">
+                <div class="col-md-2" style="margin-left: 30px">
                     <div class="text-container">
                         <h4>Links</h4>
                         <ul class="list-unstyled li-space-lg white" >
                             <li>
-                                <a class="white"  style="color: #f9fafc" href="index.html">Home</a>
+                                <a class="white"  style="color: #f9fafc;font-size: 0.875rem;text-decoration:underline " href="index.html">Home</a>
                             </li>
                             <li>
-                                <a class="white" style="color: #f9fafc" href="calc.html">Calories Control</a>
+                                <a class="white" style="color: #f9fafc;font-size: 0.875rem;text-decoration:underline" href="calc.html">Calories Control</a>
                             </li>
                             <li>
-                                <a class="white" style="color: #f9fafc" href="recipe.html">Recipe</a>
+                                <a class="white" style="color: #f9fafc;font-size: 0.875rem;text-decoration:underline" href="recipe.html">Recipe</a>
                             </li>
                             <li>
-                                <a class="white" style="color: #f9fafc" href="#">Discovery</a>
+                                <a class="white" style="color: #f9fafc;font-size: 0.875rem;text-decoration:underline" href="#">Discovery</a>
                             </li>
 
                         </ul>
@@ -318,7 +328,7 @@
     </div><!-- end of footer -->
 
     <!-- Copyright -->
-    <div class="copyright">
+    <div class="copyright" style="height:60%">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
