--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <h2>Your Body Knows What It Needs.
                         Now You Can too.</h2>
                     <p>Our evidence based recommendation helps you to have a great meal with your favourite recipes. You need not worry about the calories that you take because we take care of you.</p>
-                    <p class="testimonial-text">If finding the nearby supermarket is your other concern, then we are here to help you with that as well.</p>
+                    <p >If finding the nearby supermarket is your other concern, then we are here to help you with that as well.</p>
                     <div class="testimonial-author">From - ByteConnect</div>
                 </div> <!-- end of text-container -->
             </div> <!-- end of col -->
@@ -219,7 +219,7 @@
 
                     </div>
                     <div class="button-container">
-                        <a class="btn-solid-reg page-scroll" href="map.html">DETAILS</a>
+                        <a class="btn-solid-reg page-scroll" href="map_old.html">DETAILS</a>
                     </div> <!-- end of button-container -->
                 </div>
                 <!-- end of card -->
@@ -257,7 +257,7 @@
                                             <a class="white" href="recipe.html">Recipe</a>
                                         </li>
                                         <li>
-                                            <a class="white" href="map.html">Discovery</a>
+                                            <a class="white" href="map_old.html">Discovery</a>
                                         </li>
 
                                     </ul>
