--- a/map.html
+++ b/map.html
@@ -410,7 +410,7 @@
     function search() {
         var search = {
             bounds: map.getBounds(),
-            types: ['market']
+            types: ['supermarket']
         };
 
         places.nearbySearch(search, function (results, status) {
